adding logging for ansible

--- a/deploy_iac_tf_ansible/ansible.cfg
+++ b/deploy_iac_tf_ansible/ansible.cfg
@@ -111,6 +111,7 @@ host_key_checking = False
 
 # Logging is off by default unless this path is defined.
 #log_path = /var/log/ansible.log
+log_path = ansible.log
 
 # Default module to use when running ad-hoc commands
 #module_name = command
